deprecated/production/traefik-dashboard/route.yaml
# apps/production/traefik-dashboard/route.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: traefik-dashboard
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-dashboard
  namespace: traefik-dashboard
spec:
  parentRefs:
    - name: traefik
      namespace: traefik
  hostnames:
    - "traefik-dashboard.local.ejsadiarin.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: api@internal # This is the special name for the Traefik dashboard
          kind: TraefikService
          port: 80
